# nfp

./: .gitattributes  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  Tea  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/workflows/: publish-to-pypi.yml  run_tests_and_deploy.yml
data/: gdb9.sdf.gz.REMOVED.git-id  qm9.csv.gz.REMOVED.git-id  ysi.csv  ysi_xtb.csv
data/json/: 110758_0_bd_coord.json  11574_0_bd_coord.json  1183_0_bd_coord.json  1195_0_bd_coord.json  1200_0_bd_coord.json  12471_0_bd_coord.json  12560_0_bd_coord.json  12952_0_bd_coord.json  13638_0_bd_coord.json  1397_0_bd_coord.json  1402_0_bd_coord.json  14097_0_bd_coord.json  14518_0_bd_coord.json  1479_0_bd_coord.json  14802_0_bd_coord.json  14930_0_bd_coord.json  15081_0_bd_coord.json  (+216 more)
docs/: Makefile  api.rst  conf.py  high-level-layers.rst  index.rst  install.rst  losses.rst  low-level-layers.rst  modules.rst  nfp.layers.rst  nfp.models.rst  nfp.preprocessing.rst  nfp.rst  preprocessing.rst  requirements.txt  tutorials.rst
etc/: environment.yml
examples/: Example using xTB features.ipynb  creating_and_training_a_model.ipynb  creating_and_training_a_model_xtb.ipynb  device_placement.py  environment.yml  json.json  model_3d_coordinates.ipynb  preprocess_qm9.py  ragged_development.ipynb  run_2D_model_noatom_bn.py  run_3d_model_edgenetwork.py  schnet_edgeupdate.py  solubility_test_new_message.ipynb  tf2_tests.ipynb
nfp/: __init__.py  _version.py  frameworks.py
tests/: conftest.py  structure_data.json  test_1.json  test_2.json  train_1.json  train_3.json
(+67 files in other folders)
