[versioneer]
VCS = git
style = pep440
versionfile_source = nfp/_version.py
versionfile_build = nfp/_version.py
tag_prefix = ''

[options]
install_requires =
    numpy
    tqdm
    networkx>2.0

[options.extras_require]
pymatgen = pymatgen
tf = tensorflow>=2.4
rdkit = rdkit-pypi
test = pytest

[flake8]
max-line-length = 88
extend-ignore = E203